# beatbox

./: STACKOFL  meson.build
data/: com.github.albert-tomanek.beatbox.appdata.xml.in  com.github.albert-tomanek.beatbox.desktop.in.in  com.github.albert-tomanek.beatbox.gschema.xml  resources.xml
data/layout/: main.ui  sampleviewer.ui
src/: main.vala  sample.vala  tile.vala  tilehost.vala
src/gst/: fix_gst.vala  meanamplitude.vala  mygstaudiofilter.h  mygstaudiofilter.vapi  samplecache.vala  util.vala
src/tiles/: dummytile.vala  looptile.vala
src/widgets/: sampleviewer.vala
